# Augmented-ID

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  id.augmented.citizen.v1.aln  id.bfc.channel.v1.aln
aln/channels/: bfc.channel.v1.aln
aln/guards/: augid.guard.v1.aln
aln/schemas/: id.augmented.citizen.v1.aln  vc.core.envelope.v1.aln  vc.eco.v1.aln  vc.education.v1.aln  vc.health.v1.aln  vc.identity.v1.aln  vc.license.v1.aln  vc.peacekeeper.v1.aln
augmented-id/: constraints.aln  threat-model.md
augmented-id-core/: Cargo.toml
augmented-id-core/src/: lib.rs
augmented-id/go/: server_verify.go
augmented-id/schemas/: age-over-vc.jsonld
augmented-id/spec/: isAdult-token.aln  logging-policy.md  verifier-api.aln
augmented-id/src/: did_derive.rs
augmented-id/zk/: age_circuit_notes.md
crates/augmented-id/: Cargo.toml
crates/augmented-id/src/: lib.rs
crates/augmented-id/src/identity/: augmented_id.rs  bfc_id_token.rs  mod.rs  vc_guard.rs
crates/augmented-id/tests/: augmented_id_invariants.rs  bfc_id_token_merchant_view.rs
docs/: ARCHITECTURE.md  OFFLINE_OPERATION.md  SECURITY_MODEL.md
lua/: augid_bfc_client.lua
rust/: Cargo.toml
rust/src/: augid_core.rs  citizen.rs  crypto.rs  error.rs  guards.rs  ledger.rs  lib.rs  main.rs  token.rs
rust/tests/: integration_test.rs
specs/: ANTI_ROLLBACK_PROOF.md
