[package]
name = "augmented-id-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "1"
secp256k1 = { version = "0.28", features = ["rand"] }
bls12_381 = "0.8"
hkdf = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
rand_core = "0.6"
time = "0.3"
zeroize = "1.7"

[features]
default = ["zk"]
zk = []
