[package]
name = "augid_core"
version = "1.0.0"
edition = "2021"
authors = ["Doctor0Evil"]
description = "Augmented-ID Core Implementation - Soul-Bound Identity for Augmented Citizens"
license = "MIT"
repository = "https://github.com/Doctor0Evil/Augmented-ID"
keywords = ["identity", "blockchain", "aln", "offline-first", "neurorights"]
categories = ["cryptography", "authentication"]

[dependencies]
# Cryptography
ed25519-dalek = "2.1.0"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
rand = "0.8.5"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# Error handling
thiserror = "1.0.50"

# UUID generation
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# Hex encoding
hex = "0.4.3"

# Base64 encoding
base64 = "0.21.5"

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "augid_core"
path = "src/main.rs"

[lib]
name = "augid_core"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["std"]
std = []
offline = []
