[package]
name = "augmented-id"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

# Assuming you already have these internal crates:
aln-core = { path = "../aln-core" }
qpudatashards = { path = "../qpudatashards" }
bfc-core = { path = "../bfc-core" }
